# RNA-Seq-Nextflow

./: .gitattributes  .gitignore  .nextflow.log.1  .nextflow.log.2  .nextflow.log.3  .nextflow.log.4  .nextflow.log.5  .nextflow.log.6  .nextflow.log.7  .nextflow.log.8  .nextflow.log.9  README.md  blog_post.md  debug  final_check_results.txt  idea.md  main.nf  nextflow.config  pyproject.toml  requirements.txt  rna_seq_analysis.md  test_data_generator.py  todo.md
.github/: dependabot.yml  yamllint-config.yml
.github/workflows/: ci.yml  docs.yml  lint.yml  release.yml
.nextflow/: history
conf/: test.config
docker/: Dockerfile.base  Dockerfile.deseq2  Dockerfile.fastqc  Dockerfile.featurecounts  Dockerfile.hisat2  Dockerfile.multiqc  Dockerfile.salmon  Dockerfile.star  Dockerfile.trimmomatic  build_containers.sh
modules/: qc_workflow.nf
modules/alignment/: hisat2.nf  star.nf
modules/deseq2/: integrated_de.nf  main.nf  templates.nf
modules/fastqc/: adapters.nf  main.nf  qc_report.nf  test_data.nf
modules/multiqc/: main.nf
modules/quantification/: featurecounts.nf  salmon.nf
modules/reporting/: integrated_reporting.nf  main.nf  output_organization.nf  pipeline_info.nf
modules/trimming/: main.nf
modules/trimmomatic/: main.nf
release/: VERSION  file_manifest.txt  project_summary.md
results/fastqc/: illumina_adapters.txt  sample1_R1_fastqc.html  sample1_R2_fastqc.html
results/multiqc/: multiqc_config.yaml  multiqc_report.html
test_data/: README.md  contrasts.csv  create_test_data.py  test_annotation.gtf  test_data_generator.py  test_genome.fa
(+98 files in other folders)
