[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rnaseq-nextflow"
version = "1.0.0"
description = "RNA-Seq analysis pipeline implemented in Nextflow"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "biopython>=1.79",
    "gzip-reader>=0.1.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "scikit-learn>=0.24.0",
    "black>=22.0.0",
    "flake8>=3.9.0",
    "yamllint>=1.26.0"
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.flake8]
max-line-length = 88
extend-ignore = "E203" 